assets/css/style.css
@media (max-width: 992px) {
}
@media (max-width: 768px) {
    #bioimage {
        width: 500px;
    }
}

.contentContainer {
    margin: 15%;
}

* {
    font-family: Roboto;
    color: bisque;
}
.mediaRow {
    background: rgba(19, 18, 18, 0.527);
}
body {
    background: rgb(6, 6, 20);
    background-image: url("../images/background.jpg");
    min-height: 100%;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
}
/* .wrapper{
    background-image: url(../images/background.jpg);
    background-repeat: no-repeat;
    background-size: 100%;
} */
h2 {
    line-height: 70px;
}
.backdrop {
    background: rgba(0, 0, 0, 0.7);
}

#jumbo {
    z-index: 0;
}
body,
h3,
p {
    color: bisque;
}

.navbar {
    height: 100px;
    width: 100%;
}
.photo {
    height: 90px;
    width: 90px;
}
.row {
    width: 100%;
}
.card {
    color: black;
    background: none;
    padding: 1em;
}
.blank {
    background: none;
}
.blue {
    background: #133b66;
}

#bioimage {
    width: 300px;
}
.center {
    text-align: center;
}
.leftText {
    text-align: left;
}
.jumbotron,
.navbar,
.bio {
    background: rgba(0, 0, 0, 0.7);
    text-align: center;
    padding-left: 0;
    line-height: 50px;
}
.navbar-brand,
.nav-link,
.nav-item,
.bio,
.navbar-toggler {
    color: bisque;
    font-size: 25px;
}
.navbar-toggler-icon {
    background-image: url(../images/Menu-Icon.jpg);
}
/* .noBack{
    background: none;
} */

